# UrFU-MLOps

./: .gitignore  README.md
Lab_1/: airflow_pipe.py  train_model.py
Lab_1/Отчёт/: article.tex  preamble-article.tex  title-page.tex
Lab_2/: .env  pyproject.toml
Lab_2/config/: airflow.cfg
Lab_2/dags/: 01_python.py  02_hook.py  hooks.py
Lab_3/: GoT_preprocessed_data.csv  GoT_target.csv  pyproject.toml  train_model.ipynb  train_model.py
Lab_4/: download_data.py  jenkins_pipeline.sh  requirements.txt  train_model.py  x_train
Lab_5/: dvc.yaml  pyproject.toml
Lab_5/data/: .gitignore
Lab_5/models/: .gitignore
Lab_5/src/: config.yaml  paths.py  utils.py
Lab_5/src/model_scripts/: train.py
Lab_5/src/stages/: data_split.py  prepare_dataset.py  train.py
Lab_5/Отчёт/: article.tex  preamble-article.tex  title-page.tex
Lab_5/Отчёт/_minted/: A264CC909FDA72D1E502567671E1EFD4.highlight.minted  C6088BBCCDC5AC7040B090143E7788EC.highlight.minted  _92A2B5CB9C6906035C2864FA225E1940.index.minted
Lab_6/: .dockerignore  Dockerfile  app.py  compose.yaml  pyproject.toml  train.py
Lab_6/src/: app.py  db.py  paths.py  schemas.py  train.py
Lab_6/tests/: conftest.py  test_endpoint.py  test_endpoint_signature.py
Lab_6/weights/: model.pkl
Lab_6/Отчёт/: article.tex  title-page.tex
Lab_6/Отчёт/_minted/: 373D767C9C7218D2DA86A48201B4E8AC.highlight.minted  98E4D5FA4D0BA05B9920AC180F67DB23.highlight.minted  A5C7A5C600707F0FCB711BA1BF2DA010.highlight.minted  FC74FF459F4EA2ACEE852A5F3C4081BE.highlight.minted  _92A2B5CB9C6906035C2864FA225E1940.index.minted
(+8 files in other folders)
