[project]
name = "lab-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "dvc>=3.67.1",
    "kagglehub>=1.0.1",
    "loguru>=0.7.3",
    "mlflow<1.27.0",
    "pandas>=3.0.2",
    "protobuf<4.0.0",
    "scikit-learn>=1.8.0",
    "setuptools<80",
]
